IMPWR-15160 Fix layout issues with menu bar
Squashed commit of the following:

commit e5b0b39763ac6b84b16289a97617653a3863f2ab
Author: Clawson, Kirk <clawsonk@valassis.com>
Date:   Tue Jan 19 10:59:03 2021 -0500

    IMPWR-15160 Additional menu cleanup

commit bd7429ea9c9ecc9158e0a9c9eee22de58fbc64aa
Merge: 6b972232 11d20f65
Author: Clawson, Kirk <clawsonk@valassis.com>
Date:   Tue Jan 19 10:35:52 2021 -0500

    Merge branch 'dev' into feature/IMPWR-15160

commit 6b972232118f131ecb95e0c3029dd24041747591
Author: Clawson, Kirk <clawsonk@valassis.com>
Date:   Mon Oct 5 15:21:00 2020 -0400

    IMPWR-15160: Fixes layout issues with app menu bar

--- a/applications/impower/app/components/frame/app.header.component.scss
+++ b/applications/impower/app/components/frame/app.header.component.scss
@@ -45,3 +45,12 @@
   }
 }
 
+@media (max-width: 1024px) {
+  .impower-header-wrapper {
+    .impower-header {
+      > .announcement {
+        display: none;
+      }
+    }
+  }
+}
