--- a/applications/impower/app/components/impower-main/impower-main.component.scss
+++ b/applications/impower/app/components/impower-main/impower-main.component.scss
@@ -1,24 +1,5 @@
 @import "~assets/valassis-variables";
 
-.val-project-name {
-  float: right;
-  color: $darkGray03;
-  font-weight: bold;
-  font-size: 1.25em;
-}
-
-.menu-bar {
-  display: flex;
-  align-items: center;
-}
-
-.clear-container {
-  display: flex;
-  justify-content: flex-end;
-  padding-right: 1em;
-  padding-left: 1em;
-}
-
 .layout-main {
   width: 100%;
   .main-content {
@@ -31,6 +12,39 @@
     .side-panel-content {
       width: 1.3em;
       padding-top: $valSidebarButtonPadding;
+    }
+  }
+}
+
+.layout-menu {
+  display: flex;
+  justify-content: space-between;
+  .menu-controls {
+    display: flex;
+  }
+  .menu-addons {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    > * {
+      padding-right: 0.5em;
+    }
+    .val-project-name {
+      color: $darkGray03;
+      font-weight: bold;
+      font-size: 1.25em;
+      white-space: nowrap;
+    }
+  }
+}
+
+@media (max-width: 1024px) {
+  .layout-menu {
+    .menu-addons {
+      flex-direction: column;
+      .val-project-name {
+        display: none;
+      }
     }
   }
 }
